[bugfix] thumbnails changes had broken the moreDataLoader alignment

--- a/style/strippetsbrowser.scss
+++ b/style/strippetsbrowser.scss
@@ -182,7 +182,7 @@
     animation: moreData20 1.8s infinite ease-in-out;
 }
 .moreDataLoader{
-    margin: 0 20px 0 30px;
+    margin: auto 20px auto 30px;
     width: 1em;
     height: 1em;
     display: inline-block;
